# TrokaChatML

./: LICENSE.txt  README.Rmd  README.html  README.md
.Rproj.user/20D465CB/pcs/: files-pane.pper
Python/: LICENSE.txt  Python.gitignore  README.md  manifest.in.txt  pyproject.toml  setup.py
Python/TrokaChatML/: __init__.py
Python/TrokaChatML/trokachat_computation/: scoring_compute.py  scoring_import.py  scoring_pipeline_utils.py
Python/TrokaChatML/trokachat_computation/.ipynb_checkpoints/: scoring_compute-checkpoint.py  scoring_import-checkpoint.py  scoring_pipeline_utils-checkpoint.py
Python/TrokaChatML/trokachat_computation/data/: human_ALL_PATHWAYS_UPDATED.xlsx
Python/TrokaChatML/trokachat_noise_model/: evaluation.py
Python/TrokaChatML/trokachat_noise_model/.ipynb_checkpoints/: __init__-checkpoint.py  config-checkpoint.py  data_processing-checkpoint.py  main-checkpoint.py  plotting-checkpoint.py
Python/TrokaChatML/trokachat_pathway_drug_discovery/: data_processing.py  elbow_detection.py  gene_mapping.py  setup.py
Python/TrokaChatML/trokachat_perturb_model/: modeling.py  setup.py  visualization.py
Python/TrokaChatML/trokachat_perturb_model/trokachat_perturb_model.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Python/TrokaChatML/trokachat_tensor_decomp/: __init__.py  data_loading.py  setup.py  utils.py  visualization.py
Python/docs/: computation_vingette.md  example-notebook.ipynb  noisemodel_vignette.md  pathway-vignette-corrected.ipynb  tensor_vignette.ipynb
Python/trokachatml.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
R/R/: functions.R
(+21 files in other folders)
