[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trokachatml"
version = "0.0.0.9000"
description = "Analysis Pipeline for Single-Cell RNAseq to Drug Target Discovery"
readme = "README.md"
authors = [
    {name = "Michael Troka", email = "troks27@upenn.edu"},
    {name = "Dana Graves"},
    {name = "Michael Gonzalez"}
]
requires-python = ">=3.7"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Intended Audience :: Science/Research",
]
